--- a/src/main/resources/theme/vault/search/search.fxml
+++ b/src/main/resources/theme/vault/search/search.fxml
@@ -1,64 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXCheckBox?>
+
 <?import com.jfoenix.controls.JFXComboBox?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="searchRoot" maxHeight="-Infinity" maxWidth="-Infinity"
       minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.121"
       fx:controller="com.faforever.client.vault.search.SearchController">
-    <children>
-        <VBox fx:id="criteriaPane">
-            <children>
-                <HBox alignment="CENTER_LEFT" spacing="10.0">
-                    <children>
-                        <fx:include fx:id="initialLogicalNode" source="logical_node.fxml"/>
-                    </children>
-                </HBox>
-            </children>
-        </VBox>
+    <VBox fx:id="criteriaPane">
         <HBox alignment="CENTER_LEFT" spacing="10.0">
-            <children>
-                <JFXButton maxHeight="1.7976931348623157E308" mnemonicParsing="false"
-                           onAction="#onAddCriteriaButtonClicked" text="%query.addCriteria"/>
-                <JFXButton layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" mnemonicParsing="false"
-                           onAction="#onResetButtonClicked" text="%reset"/>
-                <HBox fx:id="sortBox" alignment="CENTER_LEFT" spacing="5">
-                    <padding>
-                        <Insets>
-                            <left>
-                                20
-                            </left>
-                            <right>
-                                20
-                            </right>
-                        </Insets>
-                    </padding>
-                    <children>
-                        <Label text="%search.sort"/>
-                        <JFXComboBox fx:id="sortPropertyComboBox"/>
-                        <JFXComboBox fx:id="sortOrderChoiceBox"/>
-                    </children>
-                </HBox>
-
-                <JFXButton fx:id="searchButton" defaultButton="true" mnemonicParsing="false"
-                           onAction="#onSearchButtonClicked" styleClass="button-raised" text="%search">
-                    <graphic>
-                        <Label styleClass="icon" text=""/>
-                    </graphic>
-                </JFXButton>
-                <JFXCheckBox fx:id="displayQueryCheckBox" mnemonicParsing="false" text="%vault.replays.displayQuery"/>
-                <CheckBox fx:id="onlyShowLastYearCheckBox" mnemonicParsing="false"
-                          text="%vault.replays.onlyShowLastYear"/>
-
-            </children>
+            <fx:include fx:id="initialLogicalNode" source="logical_node.fxml"/>
         </HBox>
-        <JFXTextField fx:id="queryTextField" onAction="#onSearchButtonClicked" maxWidth="1.7976931348623157E308"
-                      promptText="%vault.replays.queryPrompt"/>
-    </children>
+    </VBox>
+    <HBox alignment="CENTER_LEFT" spacing="10.0">
+        <Button fx:id="addCriteriaButton" maxHeight="1.7976931348623157E308" mnemonicParsing="false"
+                   onAction="#onAddCriteriaButtonClicked" text="%query.addCriteria"/>
+        <Button fx:id="resetButton" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308"
+                   mnemonicParsing="false"
+                   onAction="#onResetButtonClicked" text="%reset"/>
+        <HBox fx:id="sortBox" alignment="CENTER_LEFT" spacing="5">
+            <padding>
+                <Insets>
+                    <left>
+                        20
+                    </left>
+                    <right>
+                        20
+                    </right>
+                </Insets>
+            </padding>
+            <Label text="%search.sort"/>
+            <JFXComboBox fx:id="sortPropertyComboBox"/>
+            <JFXComboBox fx:id="sortOrderChoiceBox"/>
+        </HBox>
+        <CheckBox fx:id="onlyShowLastYearCheckBox" mnemonicParsing="false"
+                  text="%vault.replays.onlyShowLastYear"/>
+        <Button fx:id="searchButton" defaultButton="true" mnemonicParsing="false"
+                onAction="#onSearchButtonClicked" styleClass="button-raised" text="%search">
+            <graphic>
+                <Label styleClass="icon" text=""/>
+            </graphic>
+        </Button>
+        <CheckBox fx:id="displayQueryCheckBox" mnemonicParsing="false" text="%vault.replays.displayQuery"/>
+    </HBox>
+    <TextField fx:id="queryTextField" onAction="#onSearchButtonClicked" maxWidth="1.7976931348623157E308"
+               promptText="%vault.replays.queryPrompt"/>
 </VBox>
