--- a/src/main/resources/theme/vault/vault.fxml
+++ b/src/main/resources/theme/vault/vault.fxml
@@ -1,31 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.VBox?>
-
 <VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.60"
       fx:controller="com.faforever.client.vault.VaultController">
-   <children>
-      <TabPane fx:id="vaultRoot" tabClosingPolicy="UNAVAILABLE">
-          <tabs>
-              <Tab fx:id="mapVaultTab" text="%vault.maps">
-                  <fx:include fx:id="mapVault" source="map/map_vault.fxml" />
-              </Tab>
-              <Tab fx:id="modVaultTab" text="%vault.mods">
-                  <fx:include fx:id="modVault" source="mod/mod_vault.fxml" />
-              </Tab>
-              <Tab fx:id="liveReplayVaultTab" text="%vault.liveReplays">
-                  <fx:include fx:id="liveReplayVault" source="replay/live_replays.fxml"/>
-              </Tab>
-              <Tab fx:id="onlineReplayVaultTab" text="%vault.onlineReplays">
-                  <fx:include fx:id="onlineReplayVault" source="replay/online_replays.fxml"/>
-              </Tab>
-              <Tab fx:id="localReplayVaultTab" text="%vault.localReplays">
-                  <fx:include fx:id="localReplayVault" source="replay/replay_vault.fxml"/>
-              </Tab>
-          </tabs>
-      </TabPane>
-   </children>
+    <children>
+        <TabPane fx:id="vaultRoot" tabClosingPolicy="UNAVAILABLE">
+            <tabs>
+                <Tab fx:id="mapVaultTab" text="%vault.maps"/>
+                <Tab fx:id="modVaultTab" text="%vault.mods"/>
+                <Tab fx:id="onlineReplayVaultTab" text="%vault.onlineReplays"/>
+                <Tab fx:id="liveReplayVaultTab" text="%vault.liveReplays">
+                    <fx:include fx:id="liveReplayVault" source="replay/live_replays.fxml"/>
+                </Tab>
+                <Tab fx:id="localReplayVaultTab" text="%vault.localReplays">
+                    <fx:include fx:id="localReplayVault" source="replay/replay_vault.fxml"/>
+                </Tab>
+            </tabs>
+        </TabPane>
+    </children>
 </VBox>
