Update pagination style

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -421,10 +421,13 @@
 }
 
 .number-button:selected {
-  -fx-text-fill: -fx-accent;
-  -fx-underline: true;
+  -fx-background-color: -card-color;
+  -fx-border-color: -fx-accent;
 }
 
+.number-button:hover {
+  -fx-border-color: -dimmed-accent;
+}
 /***************** Icon *****************/
 
 .icon, .icon .text {
