--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -104,6 +104,22 @@
   -fx-border-color: -dimmed-accent;
 }
 
+.page-button {
+  -fx-background-color: transparent;
+  -fx-border-color: -fx-box-border;
+  -fx-border-width: 1;
+  -fx-background-radius: 2px;
+  -fx-border-radius: 2px;
+}
+
+.page-button:hover {
+  -fx-border-color: -fx-box-border;
+  -fx-background-color: -card-color;
+  -fx-border-width: 1;
+  -fx-background-radius: 2px;
+  -fx-border-radius: 2px;
+}
+
 
 /***************** Status bar *****************/
 
